--- a/src/app/dropout-reason/dropout-reason.component.html
+++ b/src/app/dropout-reason/dropout-reason.component.html
@@ -8,7 +8,12 @@
 				<div class="card p-2 pt-0 mt-4 c-main-bg-color border-success">
 					<div class="card-body text-success">
 						<p class="lead text-center">Why coun't you complete the course ?</p>
-						<div class="row text-muted small justify-content-center">Please select one</div>
+						<div class="row text-muted small justify-content-center" *ngIf="isInvalid && f.invalid">	
+							<p  [ngClass]="{'text-danger font-weight-normal border border-danger rounded p-2 guide blink': isInvalid}">Please select one <span *ngIf="isInvalid">to proceed</span></p>
+						</div>
+						<div class="row text-muted small justify-content-center" *ngIf="!isInvalid || f.valid">	
+							<p>Please select one</p>
+						</div>
 						<form #f="ngForm">
 							<div class="row mt-4">
 								<div class="col-xs-12 custom-control custom-radio">
@@ -19,7 +24,6 @@
 						      			value="Couldn't pass" 
 						      			name="dropoutReason" 
 						      			[(ngModel)]="surveyService.dropoutReason"
-						      			#production="ngModel"
 						      			required 
 							      		>
 						      		<label class="custom-control-label" for="group-1">Couldn't pass</label>
@@ -32,7 +36,6 @@
 						      			value="Financial difficulty" 
 						      			name="dropoutReason" 
 						      			[(ngModel)]="surveyService.dropoutReason"
-						      			#retail="ngModel"
 						      			required
 							      		>
 						      		<label class="custom-control-label" for="group-2">Financial difficulty</label>
@@ -45,7 +48,6 @@
 						      			value="Foreign Employment" 
 						      			name="dropoutReason" 
 						      			[(ngModel)]="surveyService.dropoutReason"
-						      			#service="ngModel"
 						      			required
 							      		>
 						      		<label class="custom-control-label" for="group-3">Foreign employment</label>
@@ -59,7 +61,6 @@
 						      			value="Foreign Study" 
 						      			name="dropoutReason" 
 						      			[(ngModel)]="surveyService.dropoutReason"
-						      			#service="ngModel"
 						      			required
 							      		>
 						      		<label class="custom-control-label" for="group-4">Foreign study</label>
@@ -73,7 +74,6 @@
 						      			value="Migration" 
 						      			name="dropoutReason" 
 						      			[(ngModel)]="surveyService.dropoutReason"
-						      			#service="ngModel"
 						      			required
 							      		>
 						      		<label class="custom-control-label" for="group-5">Migration / Moved to other place</label>
@@ -87,7 +87,6 @@
 						      			value="Moved to other college" 
 						      			name="dropoutReason" 
 						      			[(ngModel)]="surveyService.dropoutReason"
-						      			#service="ngModel"
 						      			required
 							      		>
 						      		<label class="custom-control-label" for="group-6">Moved to other college</label>
@@ -101,7 +100,6 @@
 						      			value="Other reason" 
 						      			name="dropoutReason" 
 						      			[(ngModel)]="surveyService.dropoutReason"
-						      			#service="ngModel"
 						      			required
 							      		>
 						      		<label class="custom-control-label" for="group-6">Other</label>
@@ -117,8 +115,7 @@
 								<button class="btn btn-outline-success btn-smal" (click)="goBack()">Back</button>
 							</div>
 							<div class="col xs-6">
-								<button type="submit" [disabled]="f.invalid" class="btn btn-outline-success btn-smal" routerLink="/highest-education">Next</button>
-								
+								<button type="submit" (click)="onSubmit()" class="btn btn-outline-success btn-small">Next</button>
 							</div>
 						</div>
 					</div>
