--- a/src/app/highest-education/highest-education.component.html
+++ b/src/app/highest-education/highest-education.component.html
@@ -9,7 +9,12 @@
 					<div class="card-body text-success">
 						
 						<p class="lead text-center">What is your highest level of study ?</p>
-						<div class="row text-muted small justify-content-center">Please select one</div>
+						<div class="row text-muted small justify-content-center" *ngIf="isInvalid && f.invalid">	
+							<p  [ngClass]="{'text-danger font-weight-normal border border-danger rounded p-2 guide blink': isInvalid}">Please select one <span *ngIf="isInvalid">to proceed</span></p>
+						</div>
+						<div class="row text-muted small justify-content-center" *ngIf="!isInvalid || f.valid">	
+							<p>Please select one</p>
+						</div>
 						<form #f="ngForm">
 							<div class="row mt-4">
 								<div class="col-xs-12 custom-control custom-radio">
@@ -60,44 +65,7 @@
 							      		>
 						      		<label class="custom-control-label" for="bbs">Doctorate</label>
 						      	</div>
-						      	<!--
-						      	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2">
-						      		<input 
-						      			id="ba" 
-						      			type="radio" 
-						      			class="btn btn-outline-primary custom-control-input" 
-						      			value="B.A." 
-						      			name="level" 
-						      			[(ngModel)]="surveyService.highestEducationLevel"
-						      			required
-							      		>
-						      		<label class="custom-control-label" for="housewife">B.A.</label>
-						      	</div>
-						      	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2">
-						      		<input 
-						      			id="mbs" 
-						      			type="radio" 
-						      			class="btn btn-outline-primary custom-control-input" 
-						      			value="MBS" 
-						      			name="level" 
-						      			[(ngModel)]="surveyService.highestEducationLevel"
-						      			required
-							      		>
-						      		<label class="custom-control-label" for="mbs">MBS</label>
-						      	</div>
-						      	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2">
-						      		<input 
-						      			id="ma" 
-						      			type="radio" 
-						      			class="btn btn-outline-primary custom-control-input" 
-						      			value="M.A." 
-						      			name="level" 
-						      			[(ngModel)]="surveyService.highestEducationLevel"
-						      			required
-							      		>
-						      		<label class="custom-control-label" for="ma">M.A.</label>
-						      	</div>
-						      -->
+						      	
 					     	</div>
 
 							<hr>
@@ -107,7 +75,7 @@
 									<button class="btn btn-outline-success btn-smal" (click)="goBack()">Back</button>
 								</div>
 								<div class="col xs-6">
-									<button type="submit" [disabled]="f.invalid" class="btn btn-outline-success btn-smal" routerLink="/gender">Next</button>
+									<button type="submit" (click)="onSubmit()" class="btn btn-outline-success btn-small"> Next</button>
 								</div>
 							</div>
 						</form>
