name component added

--- a/src/app/highest-education/highest-education.component.html
+++ b/src/app/highest-education/highest-education.component.html
@@ -72,7 +72,7 @@
 							
 							<div class="row text-center">
 								<div class="col xs-6">
-									<button class="btn btn-outline-success btn-smal" (click)="goBack()">Back</button>
+									<button class="btn btn-outline-success btn-small" (click)="goBack()">Back</button>
 								</div>
 								<div class="col xs-6">
 									<button type="submit" (click)="onSubmit()" class="btn btn-outline-success btn-small"> Next</button>
