--- a/src/app/country/country.component.html
+++ b/src/app/country/country.component.html
@@ -7,7 +7,12 @@
 				<p class="text-muted text-center">Please fill up the following form.</p>
 				<div class="card p-2 pt-0 mt-4 c-main-bg-color border-success">
 					<div class="card-body text-success">
-						<p class="lead text-center">Which country do you live now ?</p>
+						<div class="row text-muted small justify-content-center" *ngIf="isInvalid && f.invalid">	
+							<p  [ngClass]="{'text-danger font-weight-normal border border-danger rounded p-2 guide blink': isInvalid}">Please write country name <span *ngIf="isInvalid">to proceed</span></p>
+						</div>
+						<div class="row text-muted small justify-content-center" *ngIf="!isInvalid || f.valid">	
+							<p>Which country do you live now ?</p>
+						</div>
 						<form #f="ngForm">
 							<div>
 								<div class="row">
@@ -18,18 +23,21 @@
 									      	class="form-control" 
 									      	id="country" 
 									      	placeholder="Country" 
-									      	name="country"
-									      	#country = "ngModel" 
-									      	[(ngModel)]="surveyService.country" 
+									      	name="Country"
+									      	[(ngModel)]="surveyService.country"
+									      	#country="ngModel"  
 									      	minlength="2"
 									      	maxlength="30" 
 									      	required 
 									      	[ngClass]="{ 'is-invalid': country.invalid && country.touched, 'is-valid': country.valid && country.touched }" 
 								      		>
 								      		<div *ngIf="country.invalid && country.touched" class="invalid-feedback">
-					                            <div *ngIf="country.errors.required">Please enter your country</div>
+								      			<div *ngIf="country.errors.required">Please enter country name</div>
 					                            <div *ngIf="country.errors.minlength">Minimum 2 characters</div>
 					                            <div *ngIf="country.errors.maxlength">Maximum 30 characters</div>
+					                        </div>
+					                        <div *ngIf="isInvalid && country.pristine" class="c-invalid-feedback">
+					                            <div>Please enter country name</div>
 					                        </div>
 
 								    </div>
@@ -40,17 +48,19 @@
 
 							    <div class="row text-center">
 									<div class="col xs-6">
-										<button class="btn btn-outline-success btn-smal" (click)="goBack()">Back</button>
+										<button class="btn btn-outline-success" (click)="goBack()">Back</button>
 									</div>
-									<div class="col xs-6" *ngIf="!surveyService.location">
-										<button type="submit" [disabled]="f.invalid" type="submit"  class="btn btn-outline-success btn-smal" routerLink="/overseas-purpose">Next</button>
+									<div class="col xs-6">
+										<button type="submit" (click)="onSubmit()" class="btn btn-outline-success">Next</button>
 									</div>
+									<!--
 									<div class="col xs-6" *ngIf="surveyService.location == 'Overseas'">
 										<button type="submit" [disabled]="f.invalid" class="btn btn-outline-success btn-smal" routerLink="/overseas-purpose">NextOS</button>
 									</div>
 									<div class="col xs-6" *ngIf="surveyService.employmentStatus == 'Foreign Employment' && surveyService.location == 'Nepal'">
 										<button type="submit" [disabled]="f.invalid" class="btn btn-outline-success btn-smal" routerLink="/foreign-employment/duration">Next FE</button>
 									</div>
+								-->
 									
 								</div>
 						    </div>
