--- a/src/app/gender/gender.component.html
+++ b/src/app/gender/gender.component.html
@@ -9,7 +9,12 @@
 					<div class="card-body text-success">
 						
 						<p class="lead text-center">Your gender ?</p>
-						<div class="row text-muted small justify-content-center">Please select one</div>
+						<div class="row text-muted small justify-content-center" *ngIf="isInvalid && f.invalid">	
+							<p  [ngClass]="{'text-danger font-weight-normal border border-danger rounded p-2 guide blink': isInvalid}">Please select one <span *ngIf="isInvalid">to proceed</span></p>
+						</div>
+						<div class="row text-muted small justify-content-center" *ngIf="!isInvalid || f.valid">	
+							<p>Please select one</p>
+						</div>
 						<form #f="ngForm">
 							<div class="row text-center mt-4">
 								<div class="col custom-control custom-radio">
@@ -55,10 +60,10 @@
 
 						<div class="row text-center">
 							<div class="col xs-6">
-								<button class="btn btn-outline-success btn-smal" (click)="goBack()">Back</button>
+								<button class="btn btn-outline-success btn-small" (click)="goBack()">Back</button>
 							</div>
 							<div class="col xs-6">
-								<button type="submit" [disabled]="f.invalid" class="btn btn-outline-success btn-smal" routerLink="/location">Next</button>
+								<button type="submit" (click)="onSubmit()"  class="btn btn-outline-success btn-small">Next</button>
 							</div>
 						</div>
 					</div>
