--- a/src/app/overseas-purpose/overseas-purpose.component.html
+++ b/src/app/overseas-purpose/overseas-purpose.component.html
@@ -7,9 +7,13 @@
 				<p class="text-muted text-center">Please fill up the following form.</p>
 				<div class="card p-2 pt-0 mt-4 c-main-bg-color border-success">
 					<div class="card-body text-success">
-						
 						<p class="lead text-center">What is your purpose of living overseas ?</p>
-						<div class="row text-muted small justify-content-center">Please select one</div>
+						<div class="row text-muted small justify-content-center" *ngIf="isInvalid && f.invalid">	
+							<p  [ngClass]="{'text-danger font-weight-normal border border-danger rounded p-2 guide blink': isInvalid}">Please select one <span *ngIf="isInvalid">to proceed</span></p>
+						</div>
+						<div class="row text-muted small justify-content-center" *ngIf="!isInvalid || f.valid">	
+							<p>Please select one</p>
+						</div>
 						<form #f="ngForm">
 							<div class="row mt-4">
 								<div class="col-xs-12 custom-control custom-radio">
@@ -61,16 +65,18 @@
 									<button class="btn btn-outline-success btn-small" (click)="goBack()">Back</button>
 								</div>
 								<div class="col xs-6" *ngIf="surveyService.overseasPurpose == 'Work'">
-									<button  class="btn btn-outline-success btn-small" routerLink="/foreign-employment/duration">Next Work</button>
+									<button type="submit" (click)="onSubmit()"  class="btn btn-outline-success btn-small">Next Work</button>
 								</div>
 								<div class="col xs-6" *ngIf="surveyService.overseasPurpose == 'Study'">
-									<button  class="btn btn-outline-success btn-small" routerLink="/foreign-study/">Next Study</button>
+									<button type="submit" (click)="onSubmit()" class="btn btn-outline-success btn-small">Next Study</button>
 								</div>
+								<!--
 								<div class="col xs-6" *ngIf="surveyService.overseasPurpose=='NRN'">
-									<button  class="btn btn-outline-success btn-small" routerLink="">Next NRN</button>
+									<button type="submit" (click)="onSubmit()" class="btn btn-outline-success btn-small">Next NRN</button>
 								</div>
-								<div class="col xs-6" *ngIf="!surveyService.overseasPurpose">
-									<button [disabled]="f.invalid" class="btn btn-outline-success btn-small" routerLink="">Next</button>
+							-->
+								<div class="col xs-6" *ngIf="!surveyService.overseasPurpose || surveyService.overseasPurpose=='NRN'">
+									<button type="submit" (click)="onSubmit()" class="btn btn-outline-success btn-small">Next</button>
 								</div>
 							</div>
 						</form>
