--- a/src/app/country/country.component.html
+++ b/src/app/country/country.component.html
@@ -8,7 +8,7 @@
 				<div class="card p-2 pt-0 mt-4 c-main-bg-color border-success">
 					<div class="card-body text-success">
 						<div class="row text-muted small justify-content-center" *ngIf="isInvalid && f.invalid">	
-							<p  [ngClass]="{'text-danger font-weight-normal border border-danger rounded p-2 guide blink': isInvalid}">Please write country name <span *ngIf="isInvalid">to proceed</span></p>
+							<p  [ngClass]="{'text-danger font-weight-normal border border-danger rounded p-2 guide blink': isInvalid}">Please enter country name <span *ngIf="isInvalid">to proceed</span></p>
 						</div>
 						<div class="row text-muted small justify-content-center" *ngIf="!isInvalid || f.valid">	
 							<p>Which country do you live now ?</p>
