--- a/src/app/email/email.component.html
+++ b/src/app/email/email.component.html
@@ -1,3 +1,99 @@
-<p>
-  email works!
-</p>
+<section id="signup-form" class="mt-3">
+	<div class="container">
+		<div class="row justify-content-md-center">
+			<div class="col-sm-8 col-xs-12">
+				<h4 class="text-success font-weight-normal text-center">Employment Survey</h4>
+				<hr>
+				<p class="text-muted text-center">Please fill up the following form.</p>
+				<div class="card p-2 pt-0 mt-4 c-main-bg-color border-success">
+					<div class="card-body text-success">
+						<div class="row text-muted small justify-content-center" *ngIf="isInvalid && !surveyService.conssent">	
+							<p  [ngClass]="{'text-danger font-weight-normal border border-danger rounded p-2 guide blink': isInvalid}">Please provide your consent <span *ngIf="email.invalid"> and enter valid email address</span> <span *ngIf="isInvalid">to proceed</span></p>
+						</div>
+						<div class="row text-muted small justify-content-center" *ngIf="!isInvalid || f.valid">	
+							<p>Please enter email address or or select "Dont want to provide" ?</p>
+						</div>
+						<form #f="ngForm">
+							<div>
+								<div class="row">
+								    <div class="form-group col-xs-12 col-sm-12">
+								      	<label for="email">Email address (Optional)</label>
+								      	<input 
+								      		type="email" 
+									      	class="form-control" 
+									      	id="email" 
+									      	placeholder="email" 
+									      	name="email"
+									      	[(ngModel)]="surveyService.email"
+									      	#email="ngModel" 
+									      	pattern="^[^\s@]+@[^\s@]+\.[^\s@]{2,}$"
+									      	[ngClass]="{ 'is-invalid': email.invalid && email.touched && !noEmail, 'is-valid': email.valid && email.touched }" 
+								      		>
+								      		<div *ngIf="email.invalid && email.touched && !noEmail" class="invalid-feedback">
+								      			<div *ngIf="email.errors.required">Please enter email name</div>
+								      			<div *ngIf="email.errors.pattern">Please enter a valid email address</div>
+					                        </div>
+								    </div>
+							    </div>
+							    
+							    <div class="row mt-3">
+							    	<div class="col">
+							    		<div class="form-group custom-control custom-checkbox">
+										    <input 
+										    	type="checkbox" 
+										    	class="custom-control-input" 
+										    	id="group-2" 
+												value="Yes"
+												[(ngModel)]="surveyService.consent"
+												[ngModelOptions]="{standalone: true}"
+										    	required>
+										    <label class="custom-control-label" for="group-2">I agree with Terms & Conditions</label>
+										    <div class="invalid-feedback">Example invalid feedback text</div>
+										  </div>
+							    	</div>
+							    </div>
+
+							    <hr>
+
+							    <div class="row text-center">
+									<div class="col xs-6">
+										<button class="btn btn-outline-success" (click)="goBack()">Back</button>
+									</div>
+									<div class="col xs-6">
+										<button type="submit" (click)="onSubmit()" class="btn btn-outline-success">Submit</button>
+									</div>
+									<!--
+									<div class="col xs-6" *ngIf="surveyService.location == 'Overseas'">
+										<button type="submit" [disabled]="f.invalid" class="btn btn-outline-success btn-smal" routerLink="/overseas-purpose">NextOS</button>
+									</div>
+									<div class="col xs-6" *ngIf="surveyService.employmentStatus == 'Foreign Employment' && surveyService.location == 'Nepal'">
+										<button type="submit" [disabled]="f.invalid" class="btn btn-outline-success btn-smal" routerLink="/foreign-employment/duration">Next FE</button>
+									</div>
+								-->
+									
+								</div>
+						    </div>
+							
+							<!--	
+							<div class="row">
+								<p class="lead">Do you live in Nepal or overseas ?</p>
+
+								<div class="row">
+									<div class="col xs-6">
+										<button class="btn btn-primary btn-smal">Nepal</button>
+									</div>
+									<div class="col xs-6">
+										<button class="btn btn-primary btn-smal">Overseas</button>
+									</div>
+								</div>
+							</div>
+						-->
+							
+					  		
+						</form>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
