--- a/src/app/email/email.component.html
+++ b/src/app/email/email.component.html
@@ -7,11 +7,11 @@
 				<p class="text-muted text-center">Please fill up the following form.</p>
 				<div class="card p-2 pt-0 mt-4 c-main-bg-color border-success">
 					<div class="card-body text-success">
-						<div class="row text-muted small justify-content-center" *ngIf="isInvalid && !surveyService.conssent">	
-							<p  [ngClass]="{'text-danger font-weight-normal border border-danger rounded p-2 guide blink': isInvalid}">Please provide your consent <span *ngIf="email.invalid"> and enter valid email address</span> <span *ngIf="isInvalid">to proceed</span></p>
+						<div class="row text-muted small justify-content-center" *ngIf="email.dirty && email.invalid || isInvalid && !surveyService.consent">	
+							<p  [ngClass]="{'text-danger font-weight-normal border border-danger rounded p-2 guide blink': isInvalid}"><span *ngIf="!surveyService.consent ">Please provide your consent </span><span *ngIf="!surveyService.consent && email.invalid"> & </span> <span *ngIf="email.invalid"> Enter valid email address </span> <span *ngIf="isInvalid">to proceed</span></p>
 						</div>
 						<div class="row text-muted small justify-content-center" *ngIf="!isInvalid || f.valid">	
-							<p>Please enter email address or or select "Dont want to provide" ?</p>
+							<p>Please enter email address. You can submit without entering email address.</p>
 						</div>
 						<form #f="ngForm">
 							<div>
@@ -47,7 +47,7 @@
 												[(ngModel)]="surveyService.consent"
 												[ngModelOptions]="{standalone: true}"
 										    	required>
-										    <label class="custom-control-label" for="group-2">I agree with Terms & Conditions</label>
+										    <label class="custom-control-label" for="group-2" [ngClass]="{'text-danger': isInvalid && !surveyService.consent}">I agree with Terms & Conditions</label>
 										    <div class="invalid-feedback">Example invalid feedback text</div>
 										  </div>
 							    	</div>
@@ -62,34 +62,8 @@
 									<div class="col xs-6">
 										<button type="submit" (click)="onSubmit()" class="btn btn-outline-success">Submit</button>
 									</div>
-									<!--
-									<div class="col xs-6" *ngIf="surveyService.location == 'Overseas'">
-										<button type="submit" [disabled]="f.invalid" class="btn btn-outline-success btn-smal" routerLink="/overseas-purpose">NextOS</button>
-									</div>
-									<div class="col xs-6" *ngIf="surveyService.employmentStatus == 'Foreign Employment' && surveyService.location == 'Nepal'">
-										<button type="submit" [disabled]="f.invalid" class="btn btn-outline-success btn-smal" routerLink="/foreign-employment/duration">Next FE</button>
-									</div>
-								-->
-									
 								</div>
 						    </div>
-							
-							<!--	
-							<div class="row">
-								<p class="lead">Do you live in Nepal or overseas ?</p>
-
-								<div class="row">
-									<div class="col xs-6">
-										<button class="btn btn-primary btn-smal">Nepal</button>
-									</div>
-									<div class="col xs-6">
-										<button class="btn btn-primary btn-smal">Overseas</button>
-									</div>
-								</div>
-							</div>
-						-->
-							
-					  		
 						</form>
 					</div>
 				</div>
