--- a/src/app/status/business/employee-number/employee-number.component.html
+++ b/src/app/status/business/employee-number/employee-number.component.html
@@ -1,3 +1,4 @@
+<h1>Business Type {{surveyService.businessType}}</h1>
 <p class="lead text-center">How many employee works in your business ?</p>
 <div class="row text-muted small justify-content-center">Please select one</div>
 <form #f="ngForm">
