--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -80,13 +80,17 @@ button[disabled]{
 }
 
 	
-	.guide{
-		animation: blink 1s linear infinite;
-	}
-	@keyframes blink{
-		0%{opacity: 0;}
-		50%{opacity: .5;}
-		100%{opacity: 1;}
-	}
+.guide{
+	animation: blink 1s linear infinite;
+}
+@keyframes blink{
+	0%{opacity: 0;}
+	50%{opacity: .5;}
+	100%{opacity: 1;}
+}
+
+.hide-it{
+	display:none;
+}
 
 
