--- a/src/app/status/business/business-type/business-type.component.html
+++ b/src/app/status/business/business-type/business-type.component.html
@@ -1,5 +1,10 @@
 <p class="lead text-center">What is your business type?</p>
-<div class="row text-muted small justify-content-center">Please select one</div>
+<div class="row text-muted small justify-content-center" *ngIf="isInvalid && f.invalid">	
+	<p  [ngClass]="{'text-danger font-weight-normal border border-danger rounded p-2 guide blink': isInvalid}">Please select one <span *ngIf="showOther">or enter your business type </span> <span *ngIf="isInvalid">to proceed</span></p>
+</div>
+<div class="row text-muted small justify-content-center" *ngIf="!isInvalid || f.valid">	
+	<p>Please select one</p>
+</div>
 <form #f="ngForm">
 	<div class="row mt-4">
 		<div class="col-xs-12 custom-control custom-radio">
@@ -12,6 +17,7 @@
       			[(ngModel)]="surveyService.businessType"
       			#production="ngModel"
       			required 
+      			(change)="hideOther()"
 	      		>
       		<label class="custom-control-label" for="production">Production</label>
       	</div>
@@ -25,6 +31,7 @@
       			[(ngModel)]="surveyService.businessType"
       			#retail="ngModel"
       			required
+      			(change)="hideOther()"
 	      		>
       		<label class="custom-control-label" for="retail">Retail</label>
       	</div>
@@ -38,6 +45,7 @@
       			[(ngModel)]="surveyService.businessType"
       			#service="ngModel"
       			required
+      			(change)="hideOther()"
 	      		>
       		<label class="custom-control-label" for="service">Service</label>
       	</div>
@@ -47,17 +55,15 @@
       			id="o" 
       			type="radio" 
       			class="btn btn-outline-primary custom-control-input" 
-      			 
       			name="businessType" 
       			required
+      			[checked]="showOther"
       			(change)="otherSelected()"
 	      		>
       		<label class="custom-control-label" for="o">Other</label>
       	</div>
 
-      	
-
-      	<div class="form-group col-sm-12 col-xs-12 ml-3 mt-4" *ngIf="show && service.value != 'Service' && retail.value != 'Retail' && production.value != 'Production' ">
+      	<div class="form-group col-sm-12 col-xs-12 ml-3 mt-4" *ngIf="showOther" >
 	      	<label for="other">Please enter your business type below</label>
 	      	<input 
 	      		type="text" 
@@ -78,43 +84,16 @@
                     <div *ngIf="other.errors.maxlength">Maximum 30 characters</div>
                 </div>
 	    </div>
-	    <!--
-			<div class="form-group col-sm-12 col-xs-12 ml-3 mt-4" *ngIf="show && service.value != 'Service' && retail.value != 'Retail' && production.value != 'Production' ">
-		      	<label for="other">Please enter your business type below</label>
-		      	<input 
-		      		type="text" 
-			      	class="form-control" 
-			      	id="other" 
-			      	placeholder="Business type" 
-			      	name="businessType"
-			      	[(ngModel)]="surveyService.businessType" 
-			      	#other = "ngModel" 
-			      	minlength="2"
-			      	maxlength="30" 
-			      	required 
-			      	[ngClass]="{ 'is-invalid': other.invalid && other.touched, 'is-valid': other.valid && other.touched }" 
-		      		>
-		      		<div *ngIf="other.invalid && other.touched" class="invalid-feedback">
-	                    <div *ngIf="other.errors.required">Please enter your other</div>
-	                    <div *ngIf="other.errors.minlength">Minimum 2 characters</div>
-	                    <div *ngIf="other.errors.maxlength">Maximum 30 characters</div>
-	                </div>
-		    </div>
-    	-->
-      	
  	</div>
+ 	<hr>
 
+	<div class="row text-center">
+		<div class="col xs-6">
+			<button class="btn btn-outline-success btn-smal" (click)="goBack()">Back</button>
+		</div>
+		<div class="col xs-6">
+			<button type="submit" (click)="onSubmit()" class="btn btn-outline-success btn-smal">Next</button>
+			
+		</div>
+	</div>
 </form>
-
-<hr>
-
-<div class="row text-center">
-	<div class="col xs-6">
-		<button class="btn btn-outline-success btn-smal" (click)="goBack()">Back</button>
-	</div>
-	<div class="col xs-6">
-		<button type="submit" [disabled]="f.invalid" class="btn btn-outline-success btn-smal" routerLink="employee-number">Next</button>
-		
-	</div>
-</div>
-					
