--- a/src/app/thank-you/thank-you.component.html
+++ b/src/app/thank-you/thank-you.component.html
@@ -1,4 +1,4 @@
-<section id="signup-form" class="mt-3">
+<section id="thank-you" class="mt-3">
 	<div class="container">
 		<div class="row justify-content-md-center">
 			<div class="col-sm-8 col-xs-12">
