--- a/src/app/name/name.component.html
+++ b/src/app/name/name.component.html
@@ -7,7 +7,7 @@
 <form #f="ngForm">
 	<div class="row">
 	    <div class="form-group col-sm-6 col-xs-12">
-	      	<label for="firstname">Firstname</label>
+	      	<label for="firstname">Firstname <small>(optional)</small></label>
 	      	<input 
 	      		type="text" 
 		      	class="form-control" 
@@ -30,7 +30,7 @@
 
 	    </div>
 	    <div class="form-group col-sm-6 col-xs-12">
-	      	<label for="lastname">Lastname</label>
+	      	<label for="lastname">Lastname <small>(optional)</small></label>
 	      	<input type="text" 
 		      	class="form-control" 
 		      	id="lastname" 
