--- a/src/app/status/foreign-employment/fe-furtherstay/fe-furtherstay.component.html
+++ b/src/app/status/foreign-employment/fe-furtherstay/fe-furtherstay.component.html
@@ -1,5 +1,10 @@
 <p class="lead text-center">Whem do you intend to go back to Nepal permanently ?</p>
-<div class="row text-muted small justify-content-center">Please select one</div>
+<div class="row text-muted small justify-content-center" *ngIf="isInvalid && f.invalid">	
+	<p  [ngClass]="{'text-danger font-weight-normal border border-danger rounded p-2 guide blink': isInvalid}">Please select one <span *ngIf="isInvalid">to proceed</span></p>
+</div>
+<div class="row text-muted small justify-content-center" *ngIf="!isInvalid || f.valid">	
+	<p>Please select one</p>
+</div>
 <form #f="ngForm">
 	<div class="row mt-4">
 		<div class="col-xs-12 custom-control custom-radio">
@@ -8,8 +13,8 @@
       			type="radio" 
       			class="custom-control-input" 
       			value="1 year" 
-      			name="FeFurtherStay" 
-      			[(ngModel)]="surveyService.FeFurtherStay"
+      			name="feFurtherStay" 
+      			[(ngModel)]="surveyService.feFurtherStay"
       			#oneYear="ngModel"
       			required 
 	      		>
@@ -21,7 +26,7 @@
       			type="radio" 
       			class="btn btn-outline-primary custom-control-input" 
       			value="2-3 years" 
-      			name="FeFurtherStay" 
+      			name="feFurtherStay" 
       			[(ngModel)]="surveyService.usinessInheritance"
       			#retail="ngModel"
       			required
@@ -34,8 +39,8 @@
       			type="radio" 
       			class="btn btn-outline-primary custom-control-input" 
       			value="3-5 years" 
-      			name="FeFurtherStay" 
-      			[(ngModel)]="surveyService.FeFurtherStay"
+      			name="feFurtherStay" 
+      			[(ngModel)]="surveyService.feFurtherStay"
       			#service="ngModel"
       			required
 	      		>
@@ -47,8 +52,8 @@
       			type="radio" 
       			class="btn btn-outline-primary custom-control-input" 
       			value="5-10 years" 
-      			name="FeFurtherStay" 
-      			[(ngModel)]="surveyService.FeFurtherStay"
+      			name="feFurtherStay" 
+      			[(ngModel)]="surveyService.feFurtherStay"
       			#service="ngModel"
       			required
 	      		>
@@ -62,11 +67,10 @@
 
 <div class="row text-center">
 	<div class="col xs-6">
-		<button class="btn btn-outline-success btn-smal" (click)="goBack()">Back</button>
+		<button class="btn btn-outline-success" (click)="goBack()">Back</button>
 	</div>
 	<div class="col xs-6">
-		<button class="btn btn-outline-success btn-smal" routerLink="/business/business-duration">Next</button>
-		
+		<button class="btn btn-outline-success" type="submit" (click)="onSubmit()">Next</button>
 	</div>
 </div>
 					
