--- a/src/app/status/foreign-employment/fe-income/fe-income.component.html
+++ b/src/app/status/foreign-employment/fe-income/fe-income.component.html
@@ -1,5 +1,10 @@
 <p class="lead text-center"> What is your monthly income ( in thousands ) ?</p>
-<div class="row text-muted small justify-content-center">Please select one</div>
+<div class="row text-muted small justify-content-center" *ngIf="isInvalid && f.invalid">	
+	<p  [ngClass]="{'text-danger font-weight-normal border border-danger rounded p-2 guide blink': isInvalid}">Please select one <span *ngIf="isInvalid">to proceed</span></p>
+</div>
+<div class="row text-muted small justify-content-center" *ngIf="!isInvalid || f.valid">	
+	<p>Please select one</p>
+</div>
 <form #f="ngForm">
 	<div class="row mt-4">
 		<div class="col-xs-12 custom-control custom-radio">
@@ -8,8 +13,8 @@
       			type="radio" 
       			class="custom-control-input" 
       			value="20-30" 
-      			name="FeIncome" 
-      			[(ngModel)]="surveyService.FeIncome"
+      			name="feIncome" 
+      			[(ngModel)]="surveyService.feIncome"
       			required 
 	      		>
       		<label class="custom-control-label pl-2 ml-3" for="group-1">20-30 Thousands</label>
@@ -20,8 +25,8 @@
       			type="radio" 
       			class="btn btn-outline-primary custom-control-input" 
       			value="30-40" 
-      			name="FeIncome" 
-      			[(ngModel)]="surveyService.FeIncome"
+      			name="feIncome" 
+      			[(ngModel)]="surveyService.feIncome"
       			required
 	      		>
       		<label class="custom-control-label pl-2 ml-3" for="group-2">30-40 Thousands</label>
@@ -32,8 +37,8 @@
       			type="radio" 
       			class="btn btn-outline-primary custom-control-input" 
       			value="40-60" 
-      			name="FeIncome" 
-      			[(ngModel)]="surveyService.FeIncome"
+      			name="feIncome" 
+      			[(ngModel)]="surveyService.feIncome"
       			required
 	      		>
       		<label class="custom-control-label pl-2 ml-3" for="3-5-years">40-60 Thousands</label>
@@ -44,8 +49,8 @@
       			type="radio" 
       			class="btn btn-outline-primary custom-control-input" 
       			value="60-80" 
-      			name="FeIncome" 
-      			[(ngModel)]="surveyService.FeIncome"
+      			name="feIncome" 
+      			[(ngModel)]="surveyService.feIncome"
       			required
 	      		>
       		<label class="custom-control-label pl-2 ml-3" for="group-3">60-80 Thousands</label>
@@ -56,8 +61,8 @@
       			type="radio" 
       			class="btn btn-outline-primary custom-control-input" 
       			value="80-110" 
-      			name="FeIncome" 
-      			[(ngModel)]="surveyService.FeIncome"
+      			name="feIncome" 
+      			[(ngModel)]="surveyService.feIncome"
       			required
 	      		>
       		<label class="custom-control-label pl-2 ml-3" for="group-4">80-110 Thousands</label>
@@ -68,8 +73,8 @@
       			type="radio" 
       			class="btn btn-outline-primary custom-control-input" 
       			value="110-150" 
-      			name="FeIncome" 
-      			[(ngModel)]="surveyService.FeIncome"
+      			name="feIncome" 
+      			[(ngModel)]="surveyService.feIncome"
       			required
 	      		>
       		<label class="custom-control-label pl-2 ml-3" for="group-5">110-150 Thousands</label>
@@ -80,8 +85,8 @@
       			type="radio" 
       			class="btn btn-outline-primary custom-control-input" 
       			value="150-200" 
-      			name="FeIncome" 
-      			[(ngModel)]="surveyService.FeIncome"
+      			name="feIncome" 
+      			[(ngModel)]="surveyService.feIncome"
       			required
 	      		>
       		<label class="custom-control-label pl-2 ml-3" for="group-6">150-200 Thousands</label>
@@ -92,8 +97,8 @@
       			type="radio" 
       			class="btn btn-outline-primary custom-control-input" 
       			value="2 Lakhs above" 
-      			name="FeIncome" 
-      			[(ngModel)]="surveyService.FeIncome"
+      			name="feIncome" 
+      			[(ngModel)]="surveyService.feIncome"
       			required
 	      		>
       		<label class="custom-control-label pl-2 ml-3" for="group-7">Above 2 Lakhs</label>
@@ -104,8 +109,8 @@
       			type="radio" 
       			class="btn btn-outline-primary custom-control-input" 
       			value="Don't want to say" 
-      			name="FeIncome" 
-      			[(ngModel)]="surveyService.FeIncome"
+      			name="feIncome" 
+      			[(ngModel)]="surveyService.feIncome"
       			required
 	      		>
       		<label class="custom-control-label pl-2 ml-3" for="group-8">I don't want to say</label>
@@ -120,7 +125,7 @@
 			<button class="btn btn-outline-success btn-smal" (click)="goBack()">Back</button>
 		</div>
 		<div class="col xs-6">
-			<button type="submit" [disabled]="f.invalid" class="btn btn-outline-success btn-smal" routerLink="/foreign-employment/workdays-number">Next</button>
+			<button type="submit" (click)="onSubmit()" class="btn btn-outline-success btn-smal">Next</button>
 		</div>
 	</div>
 </form>
