--- a/src/app/status/foreign-employment/fe-overtime/fe-overtime.component.html
+++ b/src/app/status/foreign-employment/fe-overtime/fe-overtime.component.html
@@ -1,5 +1,10 @@
 <p class="lead text-center">Do you work overtime ?</p>
-<div class="row text-muted small justify-content-center">Please select one</div>
+<div class="row text-muted small justify-content-center" *ngIf="isInvalid && f.invalid">	
+	<p  [ngClass]="{'text-danger font-weight-normal border border-danger rounded p-2 guide blink': isInvalid}">Please select one <span *ngIf="isInvalid">to proceed</span></p>
+</div>
+<div class="row text-muted small justify-content-center" *ngIf="!isInvalid || f.valid">	
+	<p>Please select one</p>
+</div>
 <form #f="ngForm">
 	<div class="row mt-4 text-center">
 		<div class="col custom-control custom-radio">
@@ -9,7 +14,7 @@
       			class="custom-control-input" 
       			value="Yes"
       			name="Fe-Overtime" 
-      			[(ngModel)]="surveyService.FeOvertime"
+      			[(ngModel)]="surveyService.feOvertime"
       			#production="ngModel"
       			required 
 	      		>
@@ -23,7 +28,7 @@
       			class="custom-control-input" 
       			value="No"
       			name="Fe-Overtime" 
-      			[(ngModel)]="surveyService.FeOvertime"
+      			[(ngModel)]="surveyService.feOvertime"
       			#production="ngModel"
       			required 
 	      		>
@@ -38,14 +43,8 @@
 	<div class="col xs-6">
 		<button class="btn btn-outline-success btn-smal" (click)="goBack()">Back</button>
 	</div>
-	<div class="col xs-6" *ngIf="!surveyService.FeOvertime">
-		<button type="submit" [disabled]="f.invalid" class="btn btn-outline-success btn-small" routerLink="employee-number">Next</button>
-	</div>
-	<div class="col xs-6" *ngIf="production.value == 'Yes'">
-		<button type="submit" [disabled]="f.invalid" class="btn btn-outline-success btn-small" routerLink="/foreign-employment/overtime-hours">Next</button>
-	</div>
-	<div class="col xs-6" *ngIf="production.value == 'No'">
-		<button type="submit" [disabled]="f.invalid" class="btn btn-outline-success btn-small" routerLink="employee-number">Next</button>
+	<div class="col xs-6">
+		<button type="submit" (click)="onSubmit()" class="btn btn-outline-success btn-small">Next</button>
 	</div>
 </div>
 					
