--- a/src/app/status/foreign-employment/fe-workdays-number/fe-workdays-number.component.html
+++ b/src/app/status/foreign-employment/fe-workdays-number/fe-workdays-number.component.html
@@ -1,5 +1,10 @@
 <p class="lead text-center"> How many days do you work in a week ?</p>
-<div class="row text-muted small justify-content-center">Please select one</div>
+<div class="row text-muted small justify-content-center" *ngIf="isInvalid && f.invalid">	
+	<p  [ngClass]="{'text-danger font-weight-normal border border-danger rounded p-2 guide blink': isInvalid}">Please select one <span *ngIf="isInvalid">to proceed</span></p>
+</div>
+<div class="row text-muted small justify-content-center" *ngIf="!isInvalid || f.valid">	
+	<p>Please select one</p>
+</div>
 <form #f="ngForm">
 	<div class="row mt-4">
 		<div class="col-xs-12 custom-control custom-radio">
@@ -8,8 +13,8 @@
       			type="radio" 
       			class="custom-control-input" 
       			value="4" 
-      			name="FeWorkDayNumber" 
-      			[(ngModel)]="surveyService.FeWorkDayNumber"
+      			name="feWorkDayNumber" 
+      			[(ngModel)]="surveyService.feWorkDayNumber"
       			required 
 	      		>
       		<label class="custom-control-label pl-2 ml-3" for="group-1">4 days a week</label>
@@ -20,8 +25,8 @@
       			type="radio" 
       			class="btn btn-outline-primary custom-control-input" 
       			value="5" 
-      			name="FeWorkDayNumber" 
-      			[(ngModel)]="surveyService.FeWorkDayNumber"
+      			name="feWorkDayNumber" 
+      			[(ngModel)]="surveyService.feWorkDayNumber"
       			required
 	      		>
       		<label class="custom-control-label pl-2 ml-3" for="group-2">5 days a week</label>
@@ -32,8 +37,8 @@
       			type="radio" 
       			class="btn btn-outline-primary custom-control-input" 
       			value="6" 
-      			name="FeWorkDayNumber" 
-      			[(ngModel)]="surveyService.FeWorkDayNumber"
+      			name="feWorkDayNumber" 
+      			[(ngModel)]="surveyService.feWorkDayNumber"
       			required
 	      		>
       		<label class="custom-control-label pl-2 ml-3" for="3-5-years">6 days a week</label>
@@ -44,8 +49,8 @@
       			type="radio" 
       			class="btn btn-outline-primary custom-control-input" 
       			value="7" 
-      			name="FeWorkDayNumber" 
-      			[(ngModel)]="surveyService.FeWorkDayNumber"
+      			name="feWorkDayNumber" 
+      			[(ngModel)]="surveyService.feWorkDayNumber"
       			required
 	      		>
       		<label class="custom-control-label pl-2 ml-3" for="group-3">7 days a week</label>
@@ -60,7 +65,7 @@
 			<button class="btn btn-outline-success btn-smal" (click)="goBack()">Back</button>
 		</div>
 		<div class="col xs-6">
-			<button type="submit" [disabled]="f.invalid" class="btn btn-outline-success btn-smal" routerLink="/foreign-employment/overtime">Next</button>
+			<button type="submit" (click)="onSubmit()" class="btn btn-outline-success btn-smal">Next</button>
 		</div>
 	</div>
 </form>
