--- a/src/app/status/retired/retired-pension/retired-pension.component.html
+++ b/src/app/status/retired/retired-pension/retired-pension.component.html
@@ -1,5 +1,10 @@
 <p class="lead text-center">Do you get pension ? ( पेन्सन पाउनुहुन्छ ? )</p>
-<div class="row text-muted small justify-content-center">Please select one</div>
+<div class="row text-muted small justify-content-center" *ngIf="isInvalid && f.invalid">	
+	<p  [ngClass]="{'text-danger font-weight-normal border border-danger rounded p-2 guide blink': isInvalid}">Please select one <span *ngIf="isInvalid">to proceed</span></p>
+</div>
+<div class="row text-muted small justify-content-center" *ngIf="!isInvalid || f.valid">	
+	<p>Please select one</p>
+</div>
 <form #f="ngForm">
 	<div class="row text-center mt-3">
 		<div class="col custom-control custom-radio mt-2">
@@ -36,7 +41,7 @@
 			<button class="btn btn-outline-success btn-smal" (click)="goBack()">Back</button>
 		</div>
 		<div class="col xs-6">
-			<button type="submit" [disabled]="f.invalid" class="btn btn-outline-success btn-smal" routerLink="">Next</button>
+			<button type="submit" (click)="onSubmit()" class="btn btn-outline-success btn-smal">Next</button>
 		</div>
 	</div>
 </form>
