--- a/src/app/status/study/after-study/after-study.component.html
+++ b/src/app/status/study/after-study/after-study.component.html
@@ -1,5 +1,10 @@
 <p class="lead text-center">What would you like to do after completing this course ?</p>
-<div class="row text-muted small justify-content-center">Please select one</div>
+<div class="row text-muted small justify-content-center" *ngIf="isInvalid && f.invalid">	
+	<p  [ngClass]="{'text-danger font-weight-normal border border-danger rounded p-2 guide blink': isInvalid}">Please select one <span *ngIf="isInvalid">to proceed</span></p>
+</div>
+<div class="row text-muted small justify-content-center" *ngIf="!isInvalid || f.valid">	
+	<p>Please select one</p>
+</div>
 <form #f="ngForm">
 	<div class="row mt-4">
 		<div class="col-xs-12 custom-control custom-radio">
@@ -99,7 +104,7 @@
 		<button class="btn btn-outline-success btn-smal" (click)="goBack()">Back</button>
 	</div>
 	<div class="col xs-6">
-		<button type="submit" [disabled]="f.invalid" class="btn btn-outline-success btn-smal" routerLink="/study/dream-job">Next</button>
+		<button type="submit" (click)="onSubmit()" class="btn btn-outline-success btn-smal">Next</button>
 		
 	</div>
 </div>
